# mpu

./: .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .secrets.baseline  .travis.yml  LICENSE  Makefile  README.md  azure-pipelines.yml  cr-config.toml  cr-config.yaml  create_package.sh  modules.rst  mpu.rst  mpu.units.rst  mutmut-test.sh  noxfile.py  requirements-dev.in  requirements-dev.txt  requirements-lint.in  requirements-lint.txt  requirements.txt  setup.cfg  setup.py  test-requirements.in  test-requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: python-package.yml
docs/: Makefile  index.rst  requirements.in  requirements.txt
docs/source/: aws.rst  conf.py  datastructures.rst  datetime.rst  decorators.rst  geometry.rst  image.rst  index.rst  io.rst  math.rst  ml.rst  mpu.rst  mpu.units.rst  path.rst  pd.rst  shell.rst  string.rst  type.rst  units.rst
mpu/: __init__.py  _cli.py  _version.py  aws.py  competition.py  datastructures.py  datastructures.pyi  datetime.py  datetime.pyi  decorators.py  geometry.py  image.py  io.py  math.py  ml.py  path.py  pd.py  shell.py  spatial.py  string.py  type.py
mpu/data/: countries.csv  iban.csv  sources.txt
mpu/datastructures/: __init__.py  lists.py  tree.py
mpu/datastructures/trie/: __init__.py  base.py  char_trie.py  full_prefix_dict.py  string_trie.py
mpu/package/: __init__.py  cli.py
mpu/package/templates/: coveragerc.txt  init.py.txt  setup.cfg.txt  setup.py.txt  tox.ini.txt
mpu/units/: __init__.py  currencies.csv
requirements/: ci.in  ci.txt  dev.in  dev.txt  lint.in  lint.txt  prod.txt
tests/: conftest.py  test_aws.py  test_char_trie.py  test_cli.py  test_datastructures.py  test_datetime.py  test_decorators.py  test_geometry.py  test_image.py  test_io.py  test_lists.py  test_main.py  test_math.py  test_ml.py  test_mutmut_killers.py  test_nodebased_trie.py  test_package.py  test_path.py  test_pd.py  test_shell.py  test_string.py  test_string_trie.py  test_trie.py  test_units.py
tests/files/: example.csv  example.json  example.pickle
