[metadata]
description-file = README.md

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./mpu --cov-append --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --cov-report term --flake8 --ignore=docs/ --durations=3
doctest_encoding = utf-8
mccabe-complexity=10

[pydocstyle]
match_dir = mpu
ignore = D105, D413, D107, D416, D212, D203

[flake8]
exclude = tests/
ignore = H301, H306, H404, H405, W503, D105, D413, D103, D107

[mutmut]
backup=False
runner=python3 -m pytest
tests_dir=tests/
