[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = mpu

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

# keep in sync with mpu/_version.py
version = 0.23.1

description = Martins Python Utilities
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility,

platforms = Linux

url = https://github.com/MartinThoma/mpu
download_url = https://github.com/MartinThoma/mpu

license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./mpu --cov-report html:tests/reports/coverage-html --cov-report term-missing --ignore=docs/ --durations=3 --mypy
doctest_encoding = utf-8
mccabe-complexity=10

[pydocstyle]
match_dir = mpu
ignore = D105, D413, D107, D416, D212, D203, D417

[flake8]
max_line_length = 88
exclude = tests/*,.tox/*
ignore = H301,H306,H404,H405,W503,D105,D413,D103,D107,E252,N803,E203,C416,A001,A003,P102

[mutmut]
backup = False
runner = python -m pytest
tests_dir = tests/

[mypy]
ignore_missing_imports = True
